# linux_scripts

./: authorize.sh
docker/: install_docker.sh
glad/include/glad/: glad.h
glad/src/: glad.c
libs/ASSIMP/: install_assimp.sh
libs/GLAD/: CMakeLists.txt  excute_cmake.sh  install_glad.sh
libs/GLAD1/: CMakeLists.txt  gladConfig.cmake.in  install_glad1.sh
libs/GLAD2/: CMakeLists.txt  install_glad2.sh
libs/GLADFROMWEB/: CMakeLists.txt  execute_glad_cmake.sh  install_glad.sh
libs/GLFW/: install_glfw.sh
libs/GLFW3/: install_glfw3.sh
libs/GLM/: install_glm.sh
libs/JSON/: install_json.sh
libs/NLOMANN_JSON/: install_nlomann_json.sh
libs/OPENCV/: .morevariable  install_opencv.sh  install_opencv_prerequisite.sh
libs/OPENGL/: install_opengl.sh
libs/cxxopts/: install_cxxopts.sh
libs/opencv/: install_opencv_prerequisite.sh
libs/opengl/: install opengl.sh
nvidia/: install_NVIDIA_Container_Toolkit.sh  install_cuda.sh  install_cudnn.sh
tools/: install_basic_tools.sh  install_c_tools.sh  install_uv.sh
